<resources>
    <string name="app_name">Marketino</string>
    <string name="registration">Registration</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="marketino">Marketino</string>
    <string name="trustable_online_shopping">Trustable Online Shopping</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_account_has_already_been_registered">This account has already been registered!</string>
    <string name="register">REGISTER</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="google_logo">Google Logo</string>
<!--    toggle String for drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>